--- a/src/renderer/styles/InPrompt.css
+++ b/src/renderer/styles/InPrompt.css
@@ -1,21 +1,24 @@
-.prompt {
+.inPrompt {
   @apply p-[20px] rounded-md bg-blue
 }
-.prompt > h1 {
-  @apply text-center text-[18px] font-[600]
+
+.inPrompt > h1 {
+  @apply text-[18px] text-center font-[600]
 }
-.prompt > div {
+.inPrompt > div {
   @apply mt-[20px] flex justify-between
 }
-.prompt > div > input {
+.inPrompt > div > input {
   @apply rounded-md px-[10px]
 }
+.inPrompt > div > span {
+  @apply bg-white/40 rounded-md
+}
 
-.prompt > p {
+.inPrompt > p {
   @apply mt-[20px] font-[400] whitespace-pre-line
 }
 
-.prompt > div > button {
+.inPrompt > div > button {
   @apply w-[80px] p-[6px] rounded-md text-center bg-white
 }
-
