--- a/src/renderer/styles/InPrompt.css
+++ b/src/renderer/styles/InPrompt.css
@@ -16,7 +16,7 @@
 }
 
 .inPrompt > p {
-  @apply mt-[20px] font-[400] whitespace-pre-line
+  @apply mt-[20px] font-[400] whitespace-pre-line text-[14px]
 }
 
 .inPrompt > div > button {
