--- a/src/renderer/styles/Prompt.css
+++ b/src/renderer/styles/Prompt.css
@@ -12,7 +12,7 @@
 }
 
 .prompt > p {
-  @apply mt-[20px] font-[400] whitespace-pre-line
+  @apply mt-[20px] font-[400] whitespace-pre-line text-[14px]
 }
 
 .prompt > div > button {
